--- a/HCI Cooking/HCI Cooking/Pages/CookingLessonTemplate.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/CookingLessonTemplate.xaml
@@ -8,7 +8,7 @@
 
     <Grid Name="grdNILesson">
         <Image Height="353" HorizontalAlignment="Left" Margin="25,109,0,0" Name="imgVidPlaceholder" Stretch="Fill" VerticalAlignment="Top" Width="579" ToolTip="Video feature not yet implemented." />
-        <Label Content="Recipe Title" FontFamily="Leelawadee" FontSize="34" Height="54" HorizontalAlignment="Left" Margin="12,21,0,0" Name="lblRecipeTitle" VerticalAlignment="Top" Width="391" />
+        <Label Content="Recipe Title" FontFamily="Aharoni" FontSize="34" Height="54" HorizontalAlignment="Left" Margin="12,21,0,0" Name="lblRecipeTitle" VerticalAlignment="Top" Width="391" />
         <Label Content="LESSON NUMBER" FontFamily="Leelawadee" FontSize="16" Height="31" HorizontalAlignment="Left" Margin="41,72,0,0" Name="lblLessonNumNI" VerticalAlignment="Top" Width="294" />
         <Label Content="NOT IMPLEMENTED" FontFamily="Leelawadee" FontSize="28" Height="48" HorizontalAlignment="Left" Margin="631,41,0,0" Name="lblChapOverviewHeaderNI" VerticalAlignment="Top" Width="327" />
         <TextBlock Height="266" HorizontalAlignment="Left" Margin="651,95,0,0" Name="txtBlkChapOverviewNI" Text="Video Chapter Overview[NOT IMPLEMENETED]" VerticalAlignment="Top" Width="329" Background="#FFFDFDFD" />
