--- a/HCI Cooking/HCI Cooking/Pages/RecipeOverview.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/RecipeOverview.xaml
@@ -27,7 +27,7 @@
                     </Grid.ColumnDefinitions>
                     <Image Height="40" HorizontalAlignment="Left" Margin="0,9,0,0" Name="imgSkill1" Stretch="Fill" VerticalAlignment="Top" Width="46" />
                     <Label Content="skill1" FontFamily="Leelawadee" FontSize="20" Grid.ColumnSpan="3" Height="40" HorizontalAlignment="Left" Margin="61,9,0,0" Name="lblSkill1" VerticalAlignment="Top" Width="238" />
-                    <Button Content="-&gt;" Grid.Column="3" Height="27" HorizontalAlignment="Left" Margin="46,15,0,0" Name="btnSkill1" VerticalAlignment="Top" Width="59" />
+                    <Button Content="→" Grid.Column="3" Height="27" HorizontalAlignment="Left" Margin="46,15,0,0" Name="btnSkill1" VerticalAlignment="Top" Width="59" FontSize="18" />
                 </Grid>
                 <Grid Height="55" HorizontalAlignment="Left" Margin="26,90,0,0" Name="grdSkill2" VerticalAlignment="Top" Visibility="Hidden" Width="427">
                     <Grid.ColumnDefinitions>
@@ -37,7 +37,7 @@
                         <ColumnDefinition Width="93*" />
                     </Grid.ColumnDefinitions>
                     <Label Content="skill2" FontFamily="Leelawadee" FontSize="20" Grid.ColumnSpan="3" Height="40" HorizontalAlignment="Left" Margin="61,9,0,0" Name="lblSkill2" VerticalAlignment="Top" Width="238" />
-                    <Button Content="-&gt;" Grid.Column="3" Height="27" HorizontalAlignment="Left" Margin="46,15,0,0" Name="btnSkill2" VerticalAlignment="Top" Width="59" />
+                    <Button Content="→" Grid.Column="3" Height="27" HorizontalAlignment="Left" Margin="46,15,0,0" Name="btnSkill2" VerticalAlignment="Top" Width="59" FontSize="18" />
                     <Image Height="40" HorizontalAlignment="Left" Margin="0,9,0,0" Name="imgSkill2" Stretch="Fill" VerticalAlignment="Top" Width="46" />
                 </Grid>
                 <Grid Height="55" HorizontalAlignment="Left" Margin="26,145,0,0" Name="grdSkill3" VerticalAlignment="Top" Visibility="Hidden" Width="427">
@@ -48,7 +48,7 @@
                         <ColumnDefinition Width="93*" />
                     </Grid.ColumnDefinitions>
                     <Label Content="skill3" FontFamily="Leelawadee" FontSize="20" Grid.ColumnSpan="3" Height="40" HorizontalAlignment="Left" Margin="61,9,0,0" Name="lblSkill3" VerticalAlignment="Top" Width="238" />
-                    <Button Content="-&gt;" Grid.Column="3" Height="27" HorizontalAlignment="Left" Margin="46,15,0,0" Name="btnSkill3" VerticalAlignment="Top" Width="59" />
+                    <Button Content="→" Grid.Column="3" Height="27" HorizontalAlignment="Left" Margin="46,15,0,0" Name="btnSkill3" VerticalAlignment="Top" Width="59" FontSize="18" />
                     <Image Height="40" HorizontalAlignment="Left" Margin="0,9,0,0" Name="imgSkill3" Stretch="Fill" VerticalAlignment="Top" Width="46" />
                 </Grid>
                 <Grid Height="55" HorizontalAlignment="Left" Margin="26,200,0,0" Name="grdSkill4" VerticalAlignment="Top" Visibility="Hidden" Width="427">
@@ -59,7 +59,7 @@
                         <ColumnDefinition Width="93*" />
                     </Grid.ColumnDefinitions>
                     <Label Content="skill4" FontFamily="Leelawadee" FontSize="20" Grid.ColumnSpan="3" Height="40" HorizontalAlignment="Left" Margin="61,9,0,0" Name="lblSkill4" VerticalAlignment="Top" Width="238" />
-                    <Button Content="-&gt;" Grid.Column="3" Height="27" HorizontalAlignment="Left" Margin="46,15,0,0" Name="btnSkill4" VerticalAlignment="Top" Width="59" />
+                    <Button Content="→" Grid.Column="3" Height="27" HorizontalAlignment="Left" Margin="46,15,0,0" Name="btnSkill4" VerticalAlignment="Top" Width="59" FontSize="18" />
                     <Image Height="40" HorizontalAlignment="Left" Margin="0,9,0,0" Name="imgSkill4" Stretch="Fill" VerticalAlignment="Top" Width="46" />
                 </Grid>
                 <Label Content="Skills Needed" FontFamily="Leelawadee" FontSize="18" Height="34" HorizontalAlignment="Left" Margin="10,10,0,0" Name="lblSkillsNeed" VerticalAlignment="Top" Width="255" />
