--- a/HCI Cooking/HCI Cooking/Pages/RecipeIndividualSteps.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/RecipeIndividualSteps.xaml
@@ -11,7 +11,7 @@
             <ColumnDefinition Width="500*" />
             <ColumnDefinition Width="500*" />
         </Grid.ColumnDefinitions>
-        <Button Content="Complete Steps" Height="48" HorizontalAlignment="Left" Margin="332,12,0,0" Name="btnIndivToggleView" VerticalAlignment="Top" Width="133" Background="#FFC1C1FF" Click="btnIndiToogleView_Click" FontFamily="Century Gothic" FontSize="14" Grid.Column="1" />
+        <Button Content="Traditional View" Height="48" HorizontalAlignment="Left" Margin="332,12,0,0" Name="btnIndivToggleView" VerticalAlignment="Top" Width="133" Background="#FFC1C1FF" Click="btnIndiToogleView_Click" FontFamily="Century Gothic" FontSize="14" Grid.Column="1" />
         <Button Content="←" Height="249" HorizontalAlignment="Left" Margin="29,407,0,0" Name="btnIndivRecipePrev" VerticalAlignment="Top" Width="101" Background="#FFC1C1FF" Click="btnIndivRecipeBack_Click" FontSize="72" IsEnabled="False" FontWeight="Bold" />
         <Button Content="→" Height="249" HorizontalAlignment="Left" Margin="364,407,0,0" Name="btnIndivRecipeNext" VerticalAlignment="Top" Width="101" Background="#FFC1C1FF" Click="btnIndivRecipeNext_Click" FontSize="72" Grid.Column="1" FontWeight="Bold" />
         <TextBlock Height="117" HorizontalAlignment="Left" Margin="178,454,0,0" Name="txtBlkStep" Text="" VerticalAlignment="Top" Width="640" Background="#FFF4F8E2" FontSize="22" TextWrapping="Wrap" TextAlignment="Center" Grid.ColumnSpan="2" />
